--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-03
+Evan Battaglia <gtoevan@gmx.net>
+	* Data sources -- check for existence of necessary things
+
 2005-11-25
 Evan Battaglia <gtoevan@gmx.net>
 	* Created "data sources" structure to easily add new data sources via GPS babel.
