--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-12
+Alex Foobarian <foobarian@gmail.com>:
+	* Small fixes in Acquire from GPS code
+
 2005-12-03
 Evan Battaglia <gtoevan@gmx.net>
 	* Data sources -- check for existence of necessary things
