Upgrade Google Maps -- Europe
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@108 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-01
+Evan Battaglia <gtoevan@gmx.net>:
+	* Upgrade Google Maps version (yay Europe!)
+
 2006-05-25
 Alex Foobarian <foobarian@gmail.com>:
 	* Cleaned up the data source interface
