Adding the path for GoogleMaps from Reid Priedhorsky
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@110 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-24
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+    * Add patch for GoogleMaps from Reid Priedhorsky
+
 2006-07-01
 Evan Battaglia <gtoevan@gmx.net>:
 	* Upgrade Google Maps version (yay Europe!)
