toolbox tool improvements
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@116 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-10-23
+Alex Foobarian <foobarian@gmail.com>:
+	* Introduced a toolbar tool interface, converted existing tools to use it
+	* As a result, ruler drawing bugs are gone
+	* Sped up ruler drawing by increasing the redraw priority
+
 2006-08-15
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
     * Add implicit DMS->DDD conversions in waypoints dialogs
