--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-10-26
+Alex Foobarian <foobarian@gmail.com>:
+	* Cleared up the drawing modes and map type descriptions
+	* Updated google version string to make it work in Europe
+	* Added Cut/Copy/Paste shortcuts to right-click menus
+
 2006-10-23
 Alex Foobarian <foobarian@gmail.com>:
 	* Introduced a toolbar tool interface, converted existing tools to use it
