*** empty log message ***
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@121 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Alex Foobarian <foobarian@gmail.com>:
 	* Cleared up the drawing modes and map type descriptions
 	* Updated google version string to make it work in Europe
 	* Added Cut/Copy/Paste shortcuts to right-click menus
+	* Compacted the track properties dialog
 
 2006-10-23
 Alex Foobarian <foobarian@gmail.com>:
