Add explicit dependency to expat library
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@131 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-12
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* Add expat explicit dependency
+
 2006-10-31
 Alex Foobarian <foobarian@gmail.com>:
 	* Visual feedback for moving waypoints
