--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-29
+Alex Foobarian <foobarian@gmail.com>:
+	* Added patch by Quy Tonthat <mlist@exemail.com.au> to fix a crash bug
+	
 2006-11-12
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* Add expat explicit dependency
