git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@134 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-30
+Alex Foobarian <foobarian@gmail.com>:
+	* Added Quy Tonthat's patch to fix a bug in Track Properties
+
 2006-11-29
 Alex Foobarian <foobarian@gmail.com>:
 	* Added patch by Quy Tonthat <mlist@exemail.com.au> to fix a crash bug
