git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@138 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
+2006-12-07
+Quy Tonthat <qtonthat@gmail.com>:
+	* Fix an array overflow bug in Map Layer Properties
+	
 2006-11-30
 Alex Foobarian <foobarian@gmail.com>:
 	* Added Quy Tonthat's patch to fix a bug in Track Properties
 
 2006-11-29
 Alex Foobarian <foobarian@gmail.com>:
-	* Added patch by Quy Tonthat <mlist@exemail.com.au> to fix a crash bug
+	* Added patch by Quy Tonthat <qtonthat@gmail.com> to fix a crash bug
 	
 2006-11-12
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
