--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-26
+Quy Tonthat <qtonthat@gmail.com>:
+	* Fix a google version number change (at least in Australia).
+
 2006-12-07
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fix an array overflow bug in Map Layer Properties
