--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@ Quy Tonthat <qtonthat@gmail.com>:
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fix an array overflow bug in Map Layer Properties
 	
+2006-12-04
+Alex Foobarian <foobarian@gmail.com>:
+	* Added an "About" dialog
+	
 2006-11-30
 Alex Foobarian <foobarian@gmail.com>:
 	* Added Quy Tonthat's patch to fix a bug in Track Properties
