--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-31
+Quy Tonthat <qtonthat@gmail.com>:
+	* Added gps layer
+
 2006-12-26
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fix a google version number change (at least in Australia).
