--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-01
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* Make all .h self sufficient
+	
 2006-12-31
 Quy Tonthat <qtonthat@gmail.com>:
 	* Added gps layer
