menu selection for layer instances.
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@157 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-03
+Quy Tonthat <qtonthat@gmail.com>:
+	* Menu item selection for layer instances.
+
 2007-01-02
 Quy Tonthat <qtonthat@gmail.com>:
 	* gpslayer: Unexpose interface functions.
