Add ability to disable google stuff compilation
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@159 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-01-01
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* Make all .h self sufficient
+	* Add ability to disable Google stuff compilation
 	
 2006-12-31
 Quy Tonthat <qtonthat@gmail.com>:
