--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
+2007-01-02
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* Add ability to disable Terraserver stuff
+
 2007-01-01
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* Make all .h self sufficient
-	* Add ability to disable Google stuff compilation
+	* Add ability to disable Google stuff
 	
 2006-12-31
 Quy Tonthat <qtonthat@gmail.com>:
