Add ability to disable Expedia stuff
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@161 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-01-02
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* Add ability to disable Terraserver stuff
+	* Add ability to disable Expedia stuff
 
 2007-01-01
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
