Remove assumption aggregate is the only type of layers that has child layers. Gpslayer does too.
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@164 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-03
 Quy Tonthat <qtonthat@gmail.com>:
+	* bug fix: crash on inserting aggregate layer if the selected layer's
+	parent is not an aggregate layer.
+	* bug fix: crash when delete a child layer whose parent is not
+	an aggregiate layer (eg gpslayer)
 	* Menu item selection for layer instances.
 
 2007-01-02
