Added 'Copy' and 'Cut' to popup menus for waypoint and track
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@165 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-04
+Quy Tonthat <qtonthat@gmail.com>:
+	* Added "Copy" and "Cut" to popup menus for track and waypoint (on the
+	layer panel).
+
 2007-01-03
 Quy Tonthat <qtonthat@gmail.com>:
 	* bug fix: crash on inserting aggregate layer if the selected layer's
