--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-05
+Quy Tonthat <qtonthat@gmail.com>:
+	* Bug fix: main menu edit->delete and edit->cut did not work with
+	waypoints and tracks.
+
 2007-01-04
 Quy Tonthat <qtonthat@gmail.com>:
 	* Added "Copy" and "Cut" to popup menus for track and waypoint (on the
