Update email address
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@169 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Evan Battaglia <gtoevan@gmx.net> ** Concept and main design/coding
 Alex Foobarian <foobarian@gmail.com> ** DND, icons, various other features/bugfixes
-Guilhem BONNEFILLE  <guilhem.bonnefille@laposte.net> ** Autotools
+Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com> ** Autotools
 
 Few other bugfixes/minor patches from various contributors. See ChangeLog for details.
