Prepare release of modular.1 version
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@170 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/README
+++ b/README
@@ -7,6 +7,9 @@ Next, or if you downloaded a tarball, you have to:
 $ ./configure
 $ make
 
+Check output of "./configure --help" for configuration options.
+In particular, it is possible to disable some features, like --disable-google in order to disable any Google stuff.
+
 If you whish to install viking, you have to (as root):
 # make install
 
