Updated google tranparent version number
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@175 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-24
+Quy Tonthat <qtonthat@gmail.com>:
+	* Updated google tranparent version number.
+	* Made it more convenient to update google version numbers.
+
 2007-01-23
 Quy Tonthat <qtonthat@gmail.com>:
 	* Merged branch modular to trunk.
