--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-25
+Quy Tonthat <qtonthat@gmail.com>:
+	* Fixed bugs that caused crashes on creating new map layer or
+	  new track/waypoint layer.
+
 2007-01-24
 Quy Tonthat <qtonthat@gmail.com>:
 	* Updated google tranparent version number.
