Work done by Quy
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@178 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-27
+Quy Tonthat <qtonthat@gmail.com>:
+	* Display map sections while downloading (bug 1303429)
+
 2007-01-25
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fixed bugs that caused crashes on creating new map layer or
