--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-01
+Quy Tonthat <qtonthat@gmail.com>:
+	* Only tools that work with current active layer are enable,
+	others are disable (fade out and does nothing when clicked on).
+
 2007-01-27
 Quy Tonthat <qtonthat@gmail.com>:
 	* Display map sections while downloading (bug 1303429)
