Simplify tools enable/disable codes
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@181 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-04
+Quy Tonthat <qtonthat@gmail.com>:
+	* Simplify tools enable/disable codes.
+
 2007-02-01
 Quy Tonthat <qtonthat@gmail.com>:
 	* Only tools that work with current active layer are enable,
