--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-05
+Quy Tonthat <qtonthat@gmail.com>:
+	* Cosmetic changes.
+
 2007-02-04
 Quy Tonthat <qtonthat@gmail.com>:
 	* Simplify tools enable/disable codes.
