--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-06
+Quy Tonthat <qtonthat@gmail.com>:
+	* New google version numbers.
+
 2007-02-05
 Quy Tonthat <qtonthat@gmail.com>:
 	* Cosmetic changes.
