--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-02-06
 Quy Tonthat <qtonthat@gmail.com>:
 	* New google version numbers.
+	* correct main window title and viking website.
 
 2007-02-05
 Quy Tonthat <qtonthat@gmail.com>:
