Patch from Jocelyn Jaubert. Add time position to Track Poperties
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@185 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2007-02-06
+Jocelyn Jaubert <jocelyn.jaubert@gmail.com>
+	* Add new information to Track Properties. Postion in time will be
+	tracked and display when moving mouse cursor around the track graph.
+
+2007-02-06
 Quy Tonthat <qtonthat@gmail.com>:
 	* New google version numbers.
 	* correct main window title and viking website.
