Fix bug that causes crashes when click at the right of the track graph.
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@186 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-07
+Quy Tonthat <qtonthat@gmail.com>:
+	* Fix bug that causes crashes when click at the right side (outside)
+	of the track graph area in the Track Poperties window. 
+
 2007-02-06
 Jocelyn Jaubert <jocelyn.jaubert@gmail.com>
 	* Add new information to Track Properties. Postion in time will be
