--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-13
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* src/vikwindow.c: remove URL and version number from window title
+	* src/dialog.c: add URL and use dynamic information for version
+
 2007-02-07
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fix bug that causes crashes when click at the right side (outside)
