--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* src/vikwindow.c: remove URL and version number from window title
 	* src/dialog.c: add URL and use dynamic information for version
+	* AUTHORS, src/dialog.c: update contributors list
 
 2007-02-07
 Quy Tonthat <qtonthat@gmail.com>:
