About dialog filled with AUTHORS file
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@191 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,11 @@
+Author:
 Evan Battaglia <gtoevan@gmx.net> ** Concept and main design/coding
+
+Contributors:
 Alex Foobarian <foobarian@gmail.com> ** DND, icons, various other features/bugfixes
 Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com> ** Autotools and releases
-Quy Tonthat <qtonthat@gmail.com> ** Many improves
 Jocelyn Jaubert <jocelyn.jaubert@gmail.com> ** Track Properties dialog improves
+Quy Tonthat <qtonthat@gmail.com> ** Many improves
+Reid Priedhorsky <reid@reidster.net> ** Patches and design
 
 Few other bugfixes/minor patches from various contributors. See ChangeLog for details.
