Added viking.spec.in (by Michael A Peters). Made autoconf be aware of the new file
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@195 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-02-15
+Quy Tonthat <qtonthat@gmail.com>:
+	* Made viking.spec.in out of Michael's viking.spec
+	* Added viking.spec.in to autoconf files.
+
+2007-02-15
+Michael A Peters <mpeters@mac.com>:
+	* Added viking.spec
+
 2007-02-14
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* NEWS, configure.ac: preparing 0.1.2
