New Google version numbers
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@197 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-19
+Quy Tonthat <qtonthat@gmail.com>:
+	* New Google version numbers.
+
 2007-02-15
 Quy Tonthat <qtonthat@gmail.com>:
 	* Made viking.spec.in out of Michael's viking.spec
