--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-20
+Quy Tonthat <qtonthat@gmail.com>:
+	* GPS layer dialog now displayed at the center of the Viking main
+	window.
+
 2007-02-19
 Quy Tonthat <qtonthat@gmail.com>:
 	* New Google version numbers.
