--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-21
+Evan Battaglia <gtoevan@gmx.net>
+	* OpenSourceMap slippy maps (in google.c) -- identical to google maps except zoom numbering
+
 2007-04-04
 Quy Tonthat <qtonthat@gmail.com>:
 	* New Google version number.
