Updating Changelog for libcurl adition
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@207 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 Evan Battaglia <gtoevan@gmx.net>
 	* OpenSourceMap slippy maps (in google.c) -- identical to google maps except zoom numbering
 
+2007-04-16
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* Adding libcurl support
+
 2007-04-04
 Quy Tonthat <qtonthat@gmail.com>:
 	* New Google version number.
