New module for OpenStreetMap sources.
Extract slippy maps code from google.c and create a new module.
This one inserts two map sources: Osmarender and Mapnik.


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@208 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-23
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* OpenSourceMap slippy maps (in osm.c) -- Osmarender and Mapnik
+
 2007-04-21
 Evan Battaglia <gtoevan@gmx.net>
 	* OpenSourceMap slippy maps (in google.c) -- identical to google maps except zoom numbering
