Adding Maplint OpenStreetMap layer
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@209 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-28
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* OpenSourceMap slippy maps (in osm.c) -- Maplink tiles
+
 2007-04-23
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* OpenSourceMap slippy maps (in osm.c) -- Osmarender and Mapnik
