--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-04-28
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* OpenSourceMap slippy maps (in osm.c) -- Maplink tiles
+	* Add configuration option for OpenStreetMap sources
 
 2007-04-23
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
