--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-29
+Reid Priedhorsky <reid@reidster.net>
+	* libusb support
+
 2007-04-28
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* OpenSourceMap slippy maps (in osm.c) -- Maplink tiles
