--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-04
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* debian/: debianization
+
 2007-04-29
 Reid Priedhorsky <reid@reidster.net>
 	* libusb support
