--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-08
+Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
+	* New "Refresh onscreen tiles" menu entry
+
 2007-05-04
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* debian/: debianization
