--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-09
+Quy Tonthat <qtonthat@gmail.com>:
+	* New Google version numbers.
+
 2007-05-08
 Guilhem Bonnefille <guilhem.bonnefille@gmail.com>
 	* New "Refresh onscreen tiles" menu entry
