Now when we refresh tiles it will remove them from the memory cache like it was supposed to.
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@223 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-11
+Evan Battaglia <gtoevan@gmx.net>
+	* Fix removal of redownloaded tiles from memory cache.
+
 2007-05-09
 Quy Tonthat <qtonthat@gmail.com>:
 	* New Google version numbers.
