--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-05-11
 Evan Battaglia <gtoevan@gmx.net>
 	* Fix removal of redownloaded tiles from memory cache.
+	* Fix a stupid segfault in main.c (opening new files)
 
 2007-05-09
 Quy Tonthat <qtonthat@gmail.com>:
