Fix "corrupted tile" problem -- was really just that incomplete tiles were being drawn & subsequently taken into memory cache. We should really add a "clear memory cache" menu item too.
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@225 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-13
+Evan Battaglia <gtoevan@gmx.net>
+	* Fix problem of "bad" tiles showing up when downloading. The problem was loading of incomplete tiles. Fixed this by first downloading to a temporary file, then moving when complete.
+
 2007-05-11
 Evan Battaglia <gtoevan@gmx.net>
 	* Fix removal of redownloaded tiles from memory cache.
