Fix problems in map downloading caused by unreliable error detection.
Make sure curl_download module return right error codes. The upper level
acts upon them.

Signed-off-by: Quy Tonthat <qtonthat@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@229 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-17
+Quy Tonthat <qtonthat@gmail.com>:
+	* Fix problems in map downloading caused by unreliable error
+	detection.
+
 2007-05-15
 Quy Tonthat <qtonthat@gmail.com>:
 	* Fixed bugs that can cause segfault on exit. The problem was caused
