--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Viking 0.1.3 (2007-05-17)
+- New "Refresh onscreen tiles" entry menu
+- Default .spec file for building RPM packages
+- Default debian/ subtree for building Debian packages
+- Usage of the libcurl library
+- Three new map sources from OpenStreetMap
+- Better usage of libusb
+- Google source map improved
+- GUI improves
+
 Viking 0.1.2 (2007-02-13)
 - direct access to GPS device: GPS layer
 - position inputs accept DDD/DMM/DMS formats (ex: 3.5, 3°30.0, 3°30'0.00)
