--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-viking (0.1.2) unstable; urgency=low
+viking (0.1.3) unstable; urgency=low
 
-  * Initial Release.
+  * Update to new 0.1.3 upstream version.
 
- -- Guilhem BONNEFILLE <guilhem.bonnefille@gmail.com>  Sun, 29 Apr 2007 22:20:31 +0200
+ -- Guilhem BONNEFILLE <guilhem.bonnefille@gmail.com>  Thu, 15 May 2007 16:15:31 +0200
+
+viking (0.1.2.20070508) unstable; urgency=low
+
+  * Initial Release of the Debian packet.
+
+ -- Guilhem BONNEFILLE <guilhem.bonnefille@gmail.com>  Sun, 08 May 2007 21:00:31 +0200
