--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-05-18
 Quy Tonthat <qtonthat@gmail.com>:
 	* Map tool: Left click can now refresh display of map tiles.
+	* Check for non-displayable data after downloading map.
 
 2007-05-17
 Quy Tonthat <qtonthat@gmail.com>:
