ChangeLog entry for autodownload fixes
Signed-off-by: Quy Tonthat <qtonthat@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@240 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-20
+Quy Tonthat <qtonthat@gmail.com>:
+	* Stop autodownload from running forever on map downloading errors.
+
 2007-05-18
 Quy Tonthat <qtonthat@gmail.com>:
 	* Add curl-devel to spec file.
