Add "Save and Exit" to File menu.
Signed-off-by: Quy Tonthat <qtonthat@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@249 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2007-05-22
 Quy Tonthat <qtonthat@gmail.com>:
 	* GPS layer track and waypoint data can now be saved.
+	* Disable prompt for save before exit.
+	* Add "Save and Exit" to File menu.
 
 2007-05-20
 Quy Tonthat <qtonthat@gmail.com>:
