Maps layer: Improve performance for map autodownload.
Autodownload is now only triggered when there are changes in zoom scale
or view location.

Map autodownload caused poor performance because it was triggered unnecessarily
by every update event. Most of these events are caused by interactions
that do not require map downloading. Autodownload itself is among the worst
sources of triggers. Autodownload threads generate update event for each
downloaded map tile. These events in turn create other threads
which generates more events and so on. Most of these threads will die out
quickly but the performance still suffers.

Signed-off-by: Quy Tonthat <qtonthat@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@255 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-24
+Quy Tonthat <qtonthat@gmail.com>:
+	* Maps layer: Improve performance for map autodownload.
+
 2007-05-23
 Quy Tonthat <qtonthat@gmail.com>:
 	* New GPS layer menu items: "empty upload", "empty download", "empty
