Adding man pages
Signed-off-by: Ralf Meyer <ranfyy@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@259 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2007-05-24
+Ralf Meyer <ranfyy@gmail.com>:
+	* Adding man pages.
+
+2007-05-24
 Quy Tonthat <qtonthat@gmail.com>:
 	* Maps layer: Improve performance for map autodownload.
 	* Make dimensions easier to be found and changed to suit own tastes.
